<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Destino1 -->
    <ImageView
        android:id="@+id/imageViewDestination"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:src="@drawable/i01" />

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/destino01_title"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="4dp" />

    <TextView
        android:id="@+id/textViewDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/destino01_description"
        android:textSize="16sp"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/buttonBuy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buy_button"
        android:backgroundTint="@color/violet" />

    <!-- Destino2 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <ImageView
            android:id="@+id/imageViewDestination2"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:src="@drawable/i03" />

        <TextView
            android:id="@+id/textViewTitle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/destino02_title"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp" />

        <TextView
            android:id="@+id/textViewDescription2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/destino02_description"
            android:textSize="16sp"
            android:layout_marginBottom="16dp" />

        <Button
            android:id="@+id/buttonBuy2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buy_button"
            android:backgroundTint="@color/violet" />

        <!--CONTINUAR...-->
        <!-- Destino3 -->

        <!-- Destino4 -->

        <!-- Destino5 -->

        <!-- Destino6 -->

        <!-- Destino7 -->

        <!-- Destino8 -->
    </LinearLayout>
</LinearLayout>
